tests/baselines/reference/thisAssignmentInNamespaceDeclaration1.errors.txt
a.js(1,11): error TS8006: 'namespace' declarations can only be used in TypeScript files.
a.js(2,5): error TS2331: 'this' cannot be referenced in a module or namespace body.
a.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
b.js(1,11): error TS8006: 'namespace' declarations can only be used in TypeScript files.
b.js(2,5): error TS2331: 'this' cannot be referenced in a module or namespace body.
b.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== a.js (3 errors) ====
    namespace foo {
              ~~~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.
        this.bar = 4;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    
==== b.js (3 errors) ====
    namespace blah {
              ~~~~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.
        this.prop = 42;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    